# ticketly

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt
.claude/skills/ticketly/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archetypes/: archetypes.schema.json
codex/: AGENTS.md  agents-pointer.md
examples/: sample-profile.json  sample-release-backlog.json
house-style/: default.json  house-style.schema.json
profile/: profile.schema.json
schema/: ticket.schema.json
tests/: test_archetype_library.py  test_assignee_column.py  test_brand_assets.py  test_changelog.py  test_ci_workflow.py  test_codex_port.py  test_contributing_policy.py  test_existing_project_skill.py  test_foundation_schema.py  test_install_global.py  test_phase1_profile.py  test_phase1_render.py  test_phase1_skill.py  test_phase2_house_style.py  test_phase3_render_integration.py  test_phase3_validate.py  test_phase4_notion.py  test_pip_distribution.py  test_readme.py  test_security_md.py  test_skill_ux.py  test_tasks_md_export.py  test_your_plan_view.py
ticketly/: __init__.py  archetypes.py  cli.py  home.py  profile.py  render.py  validate.py
ticketly/data/archetypes/: archetypes.json
ticketly/data/claude/: SKILL.md
ticketly/data/codex/: AGENTS.md  agents-pointer.md
ticketly/data/examples/: house-style-backlog.json  sample-release-backlog.json
ticketly/data/profile/: profile.schema.json
