[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketly"
version = "0.1.0"
description = "Turn project requirements into clean, structured PM-quality tickets, inside Claude Code."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "PyYAML>=6.0"]

# The package is `ticketly`; its sibling data dirs (schema/, house-style/,
# examples/, profile/) are resolved at runtime relative to the package via
# __file__, so an editable install (`pip install -e .`) keeps them reachable
# from any working directory.
[tool.setuptools]
packages = ["ticketly"]
