[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketly"
version = "1.1.0"
description = "Turn project requirements into clean, structured PM-quality tickets, inside Claude Code or Codex."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shreyas Sonwane" }]
license = { file = "LICENSE" }
dependencies = ["jsonschema>=4.20"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Shreyas0786/ticketly"
Changelog = "https://github.com/Shreyas0786/ticketly/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "PyYAML>=6.0", "build>=1.0"]

[project.scripts]
# The single front door. Installed on PATH, so it runs under the interpreter
# Ticketly was installed into — robust no matter which python3 a caller resolves.
ticketly = "ticketly.cli:main"

[tool.pytest.ini_options]
markers = ["slow: marks tests that build artifacts or are otherwise slow"]

[tool.setuptools]
packages = ["ticketly"]

# Bundled data ships inside the package (under ticketly/data/) so it travels in a
# built wheel and is reachable via __file__ from any working directory.
[tool.setuptools.package-data]
ticketly = [
    "data/schema/*",
    "data/profile/*",
    "data/house-style/*",
    "data/examples/*",
    "data/archetypes/*",
    "data/codex/*",
    "data/claude/*",
]
